--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
       </div>
      
       <!-- search bar -->
+      <!--sharp-->
 <div class="input">
   <form >
   <input type="text" id="search" placeholder="Ingredient available? (one only)" value="vodka">
   <!-- Javascript Library -->
-  <ion-icon name="search-circle-outline"></ion-icon>
+
   
 </div>
-<button type="button" class="searchBtn" id="searchBtn">Search!</button>
+<button type="button" class="searchBtn" id="searchBtn"> <ion-icon name="search-circle-outline" class="search"></ion-icon> Search!</button>
+<ion-icon name="heart"></ion-icon> <!--filled-->
+      <ion-icon name="heart-outline"></ion-icon> <!--outline-->
+      <ion-icon name="heart-sharp"></ion-icon> 
 </form>
 
 
