--- a/message.html
+++ b/message.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <title>Message Me?</title>
+
+    
   </head>
   <body>
     <div class="info-container">
