--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         background-image: url("./img/shoe.webp");
         background-repeat: repeat;
      background-size: 100%;
+     background-position: top;
       }
     </style>
     
