--- a/drink.html
+++ b/drink.html
@@ -6,7 +6,6 @@
     <title>Drinks</title>
     <link rel="stylesheet" href="style.css" />
     <script src="./drink.js" defer></script>
-    <script src="./script.js" defer></script>
 
     <style>
       .containerdrink {
@@ -19,10 +18,11 @@
   </head>
 
   <body>
+    <!-- display the drink instructions and image -->
     <div class="containerdrink">
       <div id="drink" class="flex-container"></div>
 
-
+      <!-- back button to index page -->
       <a href="./index.html">
         <button type="button" class="backBtn" id="backBtn">Back</button>
       </a>
@@ -47,8 +47,6 @@
       </script>
     </div>
     <!-- End: Footer -->
-
-    <!-- <script src="./script.js"></script> -->
 
     <script
       type="module"
